--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@ classifiers = []
 keywords = []
 
 [tool.poetry.urls]
-# "Bug Tracker" = ""
+"Bug Tracker" = "https://github.com/python-slap/slap.core.semver/issues"
 # Documentation = ""
 # Homepage = ""
-# Repository = ""
+Repository = "https://github.com/python-slap/slap.core.semver"
 
 [tool.poetry.dependencies]
 python = "^3.6"
