--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ python = "^3.6"
 [tool.poetry.dev-dependencies]
 mypy = "*"
 pytest = "*"
+black = "^22.3.0"
+isort = "^5.10.1"
+flake8 = "^4.0.1"
 
 [tool.slap]
 typed = true
@@ -32,7 +35,13 @@ typed = true
 [tool.slap.test]
 check = "slap check"
 mypy = "mypy src/"
-pytest = "pytest test/ -vv"
+pytest = "pytest tests/ -vv"
+black = "black --check src/ tests/"
+isort = "isort --check-only src/ tests"
+flake8 = "flake8 src/ tests"
+
+[tool.slap.run]
+fmt = "black src/ tests/ && isort src/ tests/"
 
 [tool.mypy]
 explicit_package_bases = true
@@ -45,3 +54,9 @@ warn_no_return = true
 warn_redundant_casts = true
 warn_unreachable = true
 warn_unused_ignores = true
+
+[tool.isort]
+profile = "black"
+line_length = 120
+combine_as_imports = true
+indent = "  "
