--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ flake8 = "flake8 src/ tests"
 fmt = "black src/ tests/ && isort src/ tests/"
 
 [tool.mypy]
+python_version = "3.6"
 explicit_package_bases = true
 mypy_path = ["src"]
 namespace_packages = true
