--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "slap.core.semver"
-version = "0.1.0"
+version = "0.1.0.dev1"
 description = "Provides a semver specifier to represent version constraints compatible with `packaging`."
 authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
 license = "MIT"
